--- a/app/src/main/res/layout/activity_create_contest.xml
+++ b/app/src/main/res/layout/activity_create_contest.xml
@@ -501,6 +501,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
 
+                     android:visibility="gone"
                     android:orientation="vertical">
 
                     <TextView
