--- a/app/src/main/res/layout/activity_joining_form.xml
+++ b/app/src/main/res/layout/activity_joining_form.xml
@@ -184,6 +184,15 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp" />
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Write description of submission...(optional) "
+                android:background="@drawable/rectangular_border"
+                android:padding="10dp"
+                android:layout_margin="5dp"
+                android:id="@+id/des"/>
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
