--- a/app/src/main/res/layout/snippet_created_contest_bar.xml
+++ b/app/src/main/res/layout/snippet_created_contest_bar.xml
@@ -15,7 +15,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-
+                <ImageView
+                    android:id="@+id/backarrow"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/ic_back_black_arrow" />
 
                 <TextView
                     android:layout_centerHorizontal="true"
