--- a/app/src/main/res/layout/row_chat_right.xml
+++ b/app/src/main/res/layout/row_chat_right.xml
@@ -5,6 +5,18 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:id="@+id/messageLayout">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/username"
+        android:textSize="16sp"
+        android:visibility="visible"
+        android:layout_gravity="right"
+        android:text="naman"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="4dp"
+        android:textColor="@color/light_blue"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
